블로그 해파리화

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zoomkoding.com",
+  "name": "zellypish.dev",
   "private": false,
   "description": "A neat blog theme for developers",
   "version": "1.1.0",
